[FIX] Prevent unbroken string from overflowing popover. Thanks to Chealer for feedback. Extend exceptions for wide content to include tracker table item popovers.

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -3019,17 +3019,17 @@ body.fullscreen.tiki.navbar-padding {
   border: none;
   background: transparent; }
 
-.tiki.tiki-list_file_gallery .popover, .tiki.tiki_file_galleries .popover {
-  max-width: 50vw; }
+.tiki .popover {
+  word-wrap: break-word;
+  word-break: break-all; }
 
-.tiki .popover.tour-tour {
-  max-width: 276px; }
+.tiki.tiki-list_file_gallery .col1 .popover, .tiki.tiki_file_galleries .col1 .popover, .tiki.tiki_trackers .col1 .popover, .tiki .wikiplugin-trackerlist .popover {
+  max-width: 50vw;
+  word-wrap: normal;
+  word-break: normal; }
 
 .tiki .popover p:last-child {
   margin-bottom: 0; }
-
-.tiki .popover-content {
-  word-wrap: break-word; }
 
 .tiki .media-overflow-visible, .tiki .media-overflow-visible .media-body {
   overflow: visible; }
